# example-bazel-go-proto

./: BUILD.bazel  README.md  WORKSPACE
cmd/hello/: BUILD.bazel  hello.go
cmd/hello_protobufs/: BUILD.bazel  hello_protobufs.go
proto/greeting/: BUILD.bazel  greeting.proto
