load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com/gonzojive/example-go-bazel/cmd/hello",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
