load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello_protobufs.go"],
    importpath = "github.com/gonzojive/example-go-bazel/cmd/hello_protobufs",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/greeting:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "hello_protobufs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
