load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "example_greetings_proto",
    srcs = ["greeting.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "example_greetings_go_proto",
    importpath = "github.com/gonzojive/example-go-bazel/proto/greeting",
    proto = ":example_greetings_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":example_greetings_go_proto"],
    importpath = "github.com/gonzojive/example-go-bazel/proto/greeting",
    visibility = ["//visibility:public"],
)
